crates/opi-tui/tests/snapshots/theme_snapshots__theme_default_shell_120x40.snap
---
source: crates/opi-tui/tests/theme_snapshots.rs
expression: "render(shell, 120, 40)"
---
┌ Messages ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│You: What is the capital of France?                                                                                   │
│Asst: The capital of France is Paris.                                                                                 │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 test-model [streaming...] | 420 tokens
┌ Input ───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Type a message...                                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
