crates/opi-tui/tests/snapshots/theme_snapshots__theme_monokai_shell_120x40.snap
---
source: crates/opi-tui/tests/theme_snapshots.rs
expression: "render(shell, 120, 40)"
---
┌ Messages ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│You: Explain recursion.                                                                                               │
│Asst: Recursion is when a function calls itself.                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 test-model [idle] | 99 tokens
┌ Input ───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Give me an example.                                                                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
