crates/opi-tui/tests/snapshots/theme_snapshots__theme_monokai_shell_80x24.snap
---
source: crates/opi-tui/tests/theme_snapshots.rs
expression: "render(shell, 80, 24)"
---
┌ Messages ────────────────────────────────────────────────────────────────────┐
│You: Hello!                                                                   │
│Asst: Hi there!                                                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 test-model [thinking...]
┌ Input ───────────────────────────────────────────────────────────────────────┐
│Type a message...                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
